--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" th:href="@{/css/index/css/bootstrap.min.css}"/>
   <link rel="stylesheet" th:href="@{/css/index/css/style.css}"/>
+
 </head>
 
 <body>
@@ -30,25 +31,28 @@
     </div>
   </section>
 
-  <div class="main">
-    <div class="container">
-      <h2 class="title">로그인</h2>
-      <p class="description">아이디와 비밀번호를 입력하고 즐겨요</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <h2 class="title">로그인</h2>
+        <p class="description">아이디와 비밀번호를 입력하고 즐겨요</p>
 
-      <form class="login">
-        <div>
-          <label for="user-id">아이디</label>
-          <input type="text" id="user-id" name="loginId" required>
-        </div>
-        <div>
-          <label for="user-pw">비밀번호</label>
-          <input type="password" id="user-pw" name="password" required>
-        </div>
-        <button class="submit-button" type="button" onclick="login()">로그인</button>
-      </form>
-      <a class="signup-button" th:href="@{/signup}">회원가입</a>
+        <form class="login">
+          <div class="form-group">
+            <label for="user-id">아이디</label>
+            <input type="text" id="user-id" name="loginId" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="user-pw">비밀번호</label>
+            <input type="password" id="user-pw" name="password" class="form-control" required>
+          </div>
+          <button class="btn btn-primary submit-button" type="button" onclick="login()">로그인</button>
+        </form>
+        <a class="signup-button" th:href="@{/signup}">회원가입</a>
+      </div>
     </div>
   </div>
+
 </main>
 
 <script th:src="@{/index/js/main.js/}"></script>
