Bamflix - 내가 찜한 컨텐츠에서 컨텐츠 '단일 선택만 구매 가능' 기능 구현 v1 (

--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -159,11 +159,10 @@
 </nav>
 <!--//네비게이션-->
 
-<form>
+<form th:action="@{/purchaseContent}" method="post">
   <div class="main">
     <div class="container">
       <h2 class="title">내가 찜한 컨텐츠</h2>
-
       <div class="cart-table">
         <table class="table">
           <thead>
@@ -179,7 +178,8 @@
           <tbody>
           <tr th:each="content : ${contents}">
             <td class="align-middle text-center">
-              <input class="checkbox-input" type="checkbox">
+              <input class="checkbox-input" type="checkbox" th:name="${content.id}">
+              <input type="hidden" th:name="${loginMember.id}">
             </td>
             <td class="align-middle text-center">
               <img th:src="@{${content.getImgPath()}}" alt="cartImage1">
@@ -207,6 +207,16 @@
           </tr>
           </tbody>
         </table>
+      </div>
+      <div class="cart-order d-flex justify-content-end">
+        <button type="submit" class="btn btn-outline-danger">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+               class="bi bi-bag-heart" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                  d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5Zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0ZM14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1ZM8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"></path>
+          </svg>
+          컨텐츠 구매
+        </button>
       </div>
     </div>
   </div>
