--- a/src/main/resources/templates/content/main.html
+++ b/src/main/resources/templates/content/main.html
@@ -176,8 +176,8 @@
         </li>
       </ul>
 
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <form method="get" action="/search" class="d-flex">
+        <input class="form-control me-2" type="text" id="title" name="title" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
