Main(네비게이션) - 상품 등록 기능 추가 v1

--- a/src/main/resources/templates/content/main.html
+++ b/src/main/resources/templates/content/main.html
@@ -160,6 +160,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" th:href="@{/mypage}">마이페이지</a></li>
             <li><a class="dropdown-item" th:href="@{/subscription}">구독권 구매</a></li>
+            <li><a class="dropdown-item" th:href="@{/write}">상품 등록</a></li>
             <li>
               <form class="dropdown-item" action="/logout" method="post">
                 <button class="logout-button" type="submit">로그아웃</button>
