--- a/src/main/resources/templates/content/update.html
+++ b/src/main/resources/templates/content/update.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Update</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>update</title>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th, td {
+      padding: 10px;
+      border-bottom: 1px solid white;
+    }
+
+    button {
+      padding: 5px 15px;
+      background-color: red;
+      border: none;
+      color: white;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+  </style>
 </head>
 <body  align="center">
 <form th:action="@{/update}" method="post" enctype="multipart/form-data">
+  <h1>Content 수정</h1>
   <table align="center">
+    <tr><td></td><td></td></tr>
     <tr>
       <td>수정할 컨텐츠의 title : </td>
       <td><input type="text" id="title" name="title"></td>
