--- a/src/main/resources/templates/content/write.html
+++ b/src/main/resources/templates/content/write.html
@@ -79,11 +79,11 @@
       <td>genre : </td>
       <td>
         <label class="form-check-label" for="genre1">액션</label>
-        <input type="radio" name="genre" id="genre1" value="액션">
+        <input type="radio" name="genre" id="genre1" value="Action">
         <label class="form-check-label" for="genre2">로맨스</label>
-        <input type="radio" name="genre" id="genre2" value="로맨스">
+        <input type="radio" name="genre" id="genre2" value="Romance">
         <label class="form-check-label" for="genre3">코미디</label>
-        <input type="radio" name="genre" id="genre3" value="코미디">
+        <input type="radio" name="genre" id="genre3" value="Comic">
         <label class="form-check-label" for="genre4">SF</label>
         <input type="radio" name="genre" id="genre4" value="SF">
       </td>
