--- a/src/main/resources/templates/content/update.html
+++ b/src/main/resources/templates/content/update.html
@@ -43,43 +43,43 @@
     <tr><td></td><td></td></tr>
     <tr>
       <td>수정할 컨텐츠의 title : </td>
-      <td><input type="text" id="title" name="title"></td>
+      <td><input type="text" id="title" name="title" required></td>
     </tr>
     <tr>
       <td>summary : </td>
-      <td><input type="text" id="summary" name="summary"></td>
+      <td><input type="text" id="summary" name="summary" required></td>
     </tr>
     <tr>
       <td>Content Image Upload : </td>
-      <td><input type="file" id="imgFile" name="imgFile"></td>
+      <td><input type="file" id="imgFile" name="imgFile" required></td>
     </tr>
     <tr>
       <td>createCountry : </td>
-      <td><input type="text" id="createCountry" name="createCountry"></td>
+      <td><input type="text" id="createCountry" name="createCountry" required></td>
     </tr>
     <tr>
       <td>createYear : </td>
-      <td><input type="text" id="createYear" name="createYear"></td>
+      <td><input type="text" id="createYear" name="createYear" required></td>
     </tr>
     <tr>
       <td>category : </td>
-      <td><input type="text" id="category" name="category"></td>
+      <td><input type="text" id="category" name="category" required></td>
     </tr>
     <tr>
       <td>genre : </td>
-      <td><input type="text" id="genre" name="genre"></td>
+      <td><input type="text" id="genre" name="genre" required></td>
     </tr>
     <tr>
       <td>director : </td>
-      <td><input type="text" id="director" name="director"></td>
+      <td><input type="text" id="director" name="director"required></td>
     </tr>
     <tr>
       <td>price : </td>
-      <td><input type="text" id="price" name="price"></td>
+      <td><input type="text" id="price" name="price" required></td>
     </tr>
     <tr>
       <td>isSubscribeYn : </td>
-      <td><input type="text" id="isSubscribeYn" name="isSubscribeYn"></td>
+      <td><input type="text" id="isSubscribeYn" name="isSubscribeYn" required></td>
     </tr>
 
   </table>
