--- a/src/main/resources/templates/content/write.html
+++ b/src/main/resources/templates/content/write.html
@@ -44,23 +44,23 @@
     <tr><td></td><td></td></tr>
     <tr>
       <td>title :</td>
-      <td><input type="text" id="title" name="title"></td>
+      <td><input type="text" id="title" name="title" required></td>
     </tr>
     <tr>
       <td>summary :</td>
-      <td><input type="text" id="summary" name="summary"></td>
+      <td><input type="text" id="summary" name="summary" required></td>
     </tr>
     <tr>
       <td>Content Image Upload :</td>
-      <td><input type="file" id="imgFile" name="imgFile"></td>
+      <td><input type="file" id="imgFile" name="imgFile" required></td>
     </tr>
     <tr>
       <td>createCountry :</td>
-      <td><input type="text" id="createCountry" name="createCountry"></td>
+      <td><input type="text" id="createCountry" name="createCountry" required></td>
     </tr>
     <tr>
       <td>createYear :</td>
-      <td><input type="text" id="createYear" name="createYear"></td>
+      <td><input type="text" id="createYear" name="createYear" required></td>
     </tr>
     <tr>
       <td>category : </td>
@@ -90,11 +90,11 @@
     </tr>
     <tr>
       <td>director :</td>
-      <td><input type="text" id="director" name="director"></td>
+      <td><input type="text" id="director" name="director" required></td>
     </tr>
     <tr>
       <td>price :</td>
-      <td><input type="text" id="price" name="price"></td>
+      <td><input type="text" id="price" name="price" required></td>
     </tr>
     <tr>
       <td>is_subscribe_yn :</td>
