--- a/src/main/resources/templates/member/editProfile.html
+++ b/src/main/resources/templates/member/editProfile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>delete</title>
+    <title>editProfile</title>
     <style>
         body {
             background-color: black;
@@ -36,17 +36,30 @@
 
     </style>
 </head>
-<body  align="center">
-<form method="post" action="/delete">
-    <h1>Content 삭제</h1>
+<body>
+<form th:action="@{/editProfile/${id}}" method="post">
+    <h1>회원 정보 수정</h1>
     <table align="center">
         <tr><td></td><td></td></tr>
         <tr>
-            <td>title : </td>
-            <td><input type="text" id="title" name="title" required></td>
+            <td>name : </td>
+            <td><input type="text" id="name" name="name" required></td>
+        </tr>
+        <tr>
+            <td>email : </td>
+            <td><input type="text" id="email" name="email" required></td>
+        </tr>
+        <tr>
+            <td>birthday : </td>
+            <td><input type="text" id="birthday" name="birthday" required></td>
+        </tr>
+        <tr>
+            <td>password : </td>
+            <td><input type="password" id="password" name="password" required></td>
         </tr>
     </table>
     <br><br>
+
     <button type="submit">ok</button>
 </form>
 </body>
