--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -143,10 +143,13 @@
     </div>
 
     <!-- 회원 정보 수정 버튼 -->
-    <a class="btn btn-primary" th:if="${memberResponse != null}"
-       th:href="@{/editProfile/${loginMember.id}}">
-      회원 정보 수정
-    </a>
+    <form method="get" action="/editProfile">
+      <a class="btn btn-primary" th:if="${memberResponse != null}"
+         th:href="@{/editProfile(id=${memberResponse.id})}">
+        회원 정보 수정
+      </a>
+    </form>
+
 
     <!-- 탈퇴 버튼 -->
     <a class="btn btn-danger" th:if="${memberResponse != null}"
